--- a/friends.html
+++ b/friends.html
@@ -4,14 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Welcom</title>
+	<title>Friends</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 	<div class="status-bar">
 		<div class="status-bar__column">
-			<span>No Service</span>
 			<i class="fas fa-wifi"></i>
 		</div>
 		<div class="status-bar__column">
@@ -25,7 +24,46 @@
 
 	</div>
 
+	<header class="screen-header">
+		<h1 class="screen-header__title">Friends</h1>
+		<div class="screen-header__icons">
+			<span><i class="fas fa-search fa-lg"></i></span>
+			<span><i class="fas fa-music fa-lg"></i></span>
+			<span><i class="fas fa-cog fa-lg"></i></span>
+		</div>
+	</header>
 
+	<nav class="nav-bar">
+		<ul class="nav-bar__list">
+
+			<li class="nav-bar__btn">
+				<a class="nav-bar__link" href="#">
+
+					<i class="fas fa-user fa-lg"></i>
+				</a>
+			</li>
+
+			<li class="nav-bar__btn">
+				<a class="nav-bar__link" href="#">
+					<span class="nav-bar__notification">2</span>
+					<i class="far fa-comment fa-lg"></i>
+				</a>
+			</li>
+
+			<li class="nav-bar__btn">
+				<a class="nav-bar__link" href="#">
+					<i class="fas fa-search fa-lg"></i>
+				</a>
+			</li>
+
+			<li class="nav-bar__btn">
+				<a class="nav-bar__link" href="#">
+					<span class="nav-bar__notification_empty"> </span>
+					<i class="fas fa-ellipsis-h fa-lg"></i>
+				</a>
+			</li>
+		</ul>
+	</nav>
 
 	<script src="https://kit.fontawesome.com/6cae044631.js" crossorigin="anonymous"></script>
 </body>
