--- a/friends.html
+++ b/friends.html
@@ -120,7 +120,9 @@
 		</ul>
 	</nav>
 
-
+	<div id="splash-screen">
+		<i class="fas fa-comment"></i>
+	</div>
 	<script src="https://kit.fontawesome.com/6cae044631.js" crossorigin="anonymous"></script>
 </body>
 
